2002-03-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-art.el (gnus-article-edit-mode): Don't call `mml-mode'.

	* lisp/nnheader.el (mm-7bit-chars): Copied from mm-bodies.el.
	(mm-multibyte-p): New alias.
	(mm-char-int): Alias to `char-int'.

2002-02-26  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* lisp/gnus-art.el (gnus-request-article-this-buffer): Sync up
	with Oort-gnus.

	* lisp/nntp.el (nntp-open-via-rlogin-and-telnet): Wrap
	`call-process' with `as-binary-process'.

2002-02-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/smiley.el (smiley-regexp-alist): Fix the order of faces.

2002-02-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/smiley.el (smiley-regexp-alist): Use faces which originate
	in etc-0.27.tar.gz if exist.
	(gnus-smiley-file-types): Add xbm if available.
	(smiley-region): Don't put two or more faces in one place.

2002-02-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-art.el (gnus-request-article-this-buffer): Temporally
	fix: erase the buffer before inserting (and saving) an article.

2002-02-22  Steve Youngs  <youngs@xemacs.org>

	* aclocal.m4 (AC_PATH_LISPDIR): Default to
	.../site-packages/lisp/gnus for XEmacs.
	(AC_PATH_ETCDIR): Default to .../site-packages/etc/gnus for
	XEmacs.

2002-02-21   Daiki Ueno  <ueno@unixuser.org>

	* lisp/gnus-group.el (gnus-group-name-encode): New function.
	(gnus-group-encoded-name): New function.
	(gnus-group-completing-read-group-name): New function.
	(gnus-fetch-group): Use it.
	(gnus-group-jump-to-group): Use it.
	(gnus-group-unsubscribe-current-group): Use it.

2002-02-21   Daiki Ueno  <ueno@unixuser.org>

	* lisp/nnheader.el (mm-string-as-unibyte): Undo the last change.
	* lisp/gnus-srvr.el (gnus-browse-foreign-server): Ditto.

2002-02-21   Daiki Ueno  <ueno@unixuser.org>

	* lisp/nnheader.el (mm-string-as-unibyte): Alias to
	`string-as-unibyte'.

	* lisp/gnus-srvr.el (gnus-browse-foreign-server): Return unibyte
	group names.

2002-02-19  Katsumi Yamaoka  <yamaoka@jpl.org>
