@@ -1,5 +1,13 @@
 2002-03-04  Katsumi Yamaoka  <yamaoka@jpl.org>
 
+	* lisp/message.el (message-fix-before-sending): Bind
+	`mm-7bit-chars' to the value that concat the original value and
+	escape.
+
+	* lisp/nnheader.el (mm-7bit-chars): Remove.
+
+2002-03-04  Katsumi Yamaoka  <yamaoka@jpl.org>
+
 	* lisp/gnus-art.el (gnus-article-edit-mode): Don't call `mml-mode'.
 
 	* lisp/nnheader.el (mm-7bit-chars): Copied from mm-bodies.el.
